unpackaged/main/default/objects/Pay_Rise__c/Pay_Rise__c.object-meta.xml
<CustomObject>
    <label>Pay Rise</label>
    <nameField>
        <label>Pay Increases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Increases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>