unpackaged/main/default/objects/Pay_Rise__c/fields/Confirmed_by__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by__c</fullName>
    <label>Confirmed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>David Downes</fullName>
            </value>
            <value>
                <fullName>James Smith</fullName>
            </value>
            <value>
                <fullName>Manish Amlani</fullName>
            </value>
            <value>
                <fullName>Monty Meghjee</fullName>
            </value>
            <value>
                <fullName>Simon Ordish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>