unpackaged/main/default/objects/Pay_Rise__c/fields/Increment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Increment_Start_Date__c</fullName>
    <label>Increment Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>