unpackaged/main/default/objects/Pay_Rise__c/fields/PNL_Name__c.field-meta.xml
<CustomField>
    <fullName>PNL_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PNL Name</label>
    <referenceTo>PNL__c</referenceTo>
    <relationshipLabel>Pay Increases</relationshipLabel>
    <relationshipName>Pay_Increases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>