unpackaged/main/default/objects/Pay_Rise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Confirmed_by__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PNL_Name__c</columns>
    <columns>Increment__c</columns>
    <columns>Job_Title__c</columns>
    <columns>New_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>